Phase5/negative_tests/prog2.dlp
//Using 'var' keyword twice - this should not be allowed
var x = 2, var y = 3;
return 0;